--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -1,9 +1,9 @@
 version: "3.8"
 services:
   streamlit:
-    image: rylorin/streamlit:latest
-#    ports:
-#    - 8501:8501/tcp
+    image: rylorin/streamlit-docker:latest
+    ports:
+    - 8501:8501/tcp
     environment:
       GIT_URL: ${GIT_URL:-https://github.com/streamlit/streamlit-example.git}
     networks:
